--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 26
+    //buildToolsVersion "26.0.2"
     defaultConfig {
         applicationId "com.flightcontrol.uwa.flightcontrolapp"
-        minSdkVersion 19
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         multiDexEnabled true
+
+        ndk {
+            abiFilters 'armeabi-v7a', 'x86', 'arm64-v8a'
+        }
 
     }
     buildTypes {
@@ -17,6 +22,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+
+    dexOptions {
+        javaMaxHeapSize "4g"
     }
 
     packagingOptions {
@@ -36,18 +45,16 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:mediarouter-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:multidex:1.0.3'
 
     testImplementation 'junit:junit:4.12'
-    //implementation 'org.osmdroid:osmdroid-android:6.0.2'
-    // implementation 'org.osmdroid:osmdroid-wms:6.0.2'
-    //implementation 'org.osmdroid:osmdroid-mapsforge:6.0.2'
-    //implementation 'org.osmdroid:osmdroid-geopackage:6.0.2'
     implementation 'com.google.android.gms:play-services:12.0.1'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation('com.dji:dji-sdk:4.8.1')
+    implementation 'com.squareup:otto:1.3.8'
     compileOnly('com.dji:dji-sdk-provided:4.8.1')
 }
