--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
+        classpath 'com.android.tools.build:gradle:3.5.1'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -17,11 +17,14 @@ buildscript {
 
 allprojects {
     repositories {
-        google()
-        jcenter()
+
+        maven {
+            url 'https://maven.google.com/'
+            name 'Google'
+        }
+       jcenter()
     }
 }
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
