--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.0.0'
     implementation 'androidx.mediarouter:mediarouter:1.0.0'
+    implementation "androidx.versionedparcelable:versionedparcelable:1.1.0"
+
+
 
     implementation 'androidx.multidex:multidex:2.0.0'
 
